--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-query": "^3.5.11",
     "react-responsive": "^8.1.0",
     "react-router-dom": "^5.2.0",
     "react-transition-group": "^4.4.1",
